Handle add/delete column schema changes.